--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
         <ul class="filmes-list">
           <li>
 
-            <a target="_blank" href="https://www.themoviedb.org/movie/766507"></a>
-            <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/g7Ii9sYAFG96W7cvMQ4zXq39RJ5.jpg"
-              alt=" Image do filme o caçador  ">
+            <a target="_blank" href="https://www.themoviedb.org/movie/766507">
+              <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/g7Ii9sYAFG96W7cvMQ4zXq39RJ5.jpg"
+                alt=" Image do filme o caçador  "></a>
           </li>
 
           <li>
-            <a target="_blank" href="https://www.themoviedb.org/movie/616037"></a>
-            <img src="https://www.themoviedb.org/t/p/w94_and_h141_bestv2/ArWn6gCi61b3b3hclD2L0LOk66k.jpg"
-              alt=" Image do filme Thor: Amor e Trovão">
+            <a target="_blank" href="https://www.themoviedb.org/movie/791373">
+              <img src="https://www.themoviedb.org/t/p/w94_and_h141_bestv2/ArWn6gCi61b3b3hclD2L0LOk66k.jpg"
+                alt=" Image do filme liga da justiça"></a>
           </li>
 
           <li>
-            <a target="_blank" href="https://www.themoviedb.org/movie/361743"></a>
-            <img src="https://www.themoviedb.org/t/p/w94_and_h141_bestv2/c1k1N5rrA6NGhKUZ6hOYR0Am9Ss.jpg"
-              alt=" Image do filme Top Gun: Maverick">
+            <a target="_blank" href="https://www.themoviedb.org/movie/49521">
+              <img src="https://www.themoviedb.org/t/p/w94_and_h141_bestv2/c1k1N5rrA6NGhKUZ6hOYR0Am9Ss.jpg"
+                alt=" Image do filme liga da justiça"></a>
           </li>
 
         </ul>
@@ -61,21 +61,21 @@
 
         <ul class="channel-list">
           <li>
-            <a target="_blank" href="https://www.themoviedb.org/tv/60574"></a>
-            <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/i0uajcHH9yogXMfDHpOXexIukG9.jpg"
-              alt="Image da serie Peaky Blinders: Sangue, Apostas e Navalhas">
+            <a target="_blank" href="https://www.themoviedb.org/tv/60574">
+              <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/i0uajcHH9yogXMfDHpOXexIukG9.jpg"
+                alt="Image da serie Peaky Blinders: Sangue, Apostas e Navalhas"></a>
           </li>
 
           <li>
-            <a target="_blank" href="https://www.themoviedb.org/tv/46896"></a>
-            <img src="https://www.themoviedb.org/t/p/w94_and_h141_bestv2/j4YEHjh1t9mHpdDwbqLCc04xBMY.jpg"
-              alt="Image da serie Os Originais">
+            <a target="_blank" href="https://www.themoviedb.org/tv/46896">
+              <img src="https://www.themoviedb.org/t/p/w94_and_h141_bestv2/j4YEHjh1t9mHpdDwbqLCc04xBMY.jpg"
+                alt="Image da serie Os Originais"></a>
           </li>
 
           <li>
-            <a target="_blank" href="https://www.themoviedb.org/tv/18165"></a>
-            <img src="https://www.themoviedb.org/t/p/w94_and_h141_bestv2/lcGQaSrWkkxGuh0JJqyN2TkuNqb.jpg"
-              alt="Image de serie Diários de um Vampiro">
+            <a target="_blank" href="https://www.themoviedb.org/tv/18165">
+              <img src="https://www.themoviedb.org/t/p/w94_and_h141_bestv2/lcGQaSrWkkxGuh0JJqyN2TkuNqb.jpg"
+                alt="Image de serie Diários de um Vampiro"></a>
           </li>
         </ul>
       </div>
@@ -132,6 +132,12 @@
                   d="M11 11.5C11.8284 11.5 12.5 10.8284 12.5 10C12.5 9.17157 11.8284 8.5 11 8.5C10.1716 8.5 9.5 9.17157 9.5 10C9.5 10.8284 10.1716 11.5 11 11.5Z"
                   fill="#FA41FE" />
               </svg>
+          </li>
+
+          <li>
+            <a target="_blank" href="https://t.me/eliabesilva317"><img
+                src="https://img.shields.io/badge/Telegram-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white"
+                target="_blank"></a>
           </li>
 
         </ul>
